--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <!-- Index Page Content below -->
 <header id="portfolio">
   <a href="#portfolio" id="logo">
-    <h1>Justin Scott</h1>
-    <h2>Teacher</h2>
+    <h1>Alyssa Lippert</h1>
+    <h2>Student</h2>
   </a>
   <nav>
     <ul>
@@ -21,33 +21,33 @@
   <section>
     <ul id="gallery">
       <li>
-        <a href="https://webucation.github.io/css-challenge-5/img/numbers-01.jpg">
-          <img src="https://webucation.github.io/css-challenge-5/img/numbers-01.jpg" alt="">
-          <p>Experimentation with color and texture.</p>
+        <a href="https://en.wikipedia.org/wiki/Humpback_whale">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/6/61/Humpback_Whale_underwater_shot.jpg" alt="">
+          <p>It's just a big humpback whale, man...</p>
         </a>
       </li>
       <li>
-        <a href="https://webucation.github.io/css-challenge-5/img/numbers-02.jpg">
-          <img src="https://webucation.github.io/css-challenge-5/img/numbers-02.jpg" alt="">
-          <p>Playing with blending modes in Photoshop.</p>
+        <a href="http://www.bbc.com/news/magazine-37025092">
+          <img src="http://ichef.bbci.co.uk/news/660/cpsprodpb/115CA/production/_90741117_0bebad60-b644-409a-83cb-5cd96a539a4c.jpg" alt="">
+          <p>A jumping killer whale...there he goes.</p>
         </a>
       </li>
       <li>
-        <a href="https://webucation.github.io/css-challenge-5/img/numbers-06.jpg">
-          <img src="https://webucation.github.io/css-challenge-5/img/numbers-06.jpg" alt="">
-          <p>Trying to create an 80's style of glows.</p>
+        <a href="http://www.factslides.com/s-Whale">
+          <img src="http://www.factslides.com/imgs/whale-shark.jpg" alt="">
+          <p>A whale shark! Not really a whale but...it looks cool, it's eating some fish.</p>
         </a>
       </li>
       <li>
-        <a href="https://webucation.github.io/css-challenge-5/img/numbers-09.jpg">
-          <img src="https://webucation.github.io/css-challenge-5/img/numbers-09.jpg" alt="">
-          <p>Drips created using Photoshop brushes.</p>
+        <a href="http://www.livescience.com/3980-mystery-unicorn-whale-solved.html">
+          <img src="http://www.livescience.com/images/i/000/003/436/original/051213_narwhal_whale_02.jpg?interpolation=lanczos-none&fit=inside%7C660:*" alt="">
+          <p>a narwhal whale! It hasa horn which is really weird considering all other whales don't.</p>
         </a>
       </li>
       <li>
-        <a href="https://webucation.github.io/css-challenge-5/img/numbers-12.jpg">
-          <img src="https://webucation.github.io/css-challenge-5/img/numbers-12.jpg" alt="">
-          <p>Creating shapes using repetition.</p>
+        <a href="http://kids.nationalgeographic.com/animals/beluga-whale/#beluga-whale-underewater-closeup-teeth.jpg">
+          <img src="http://kids.nationalgeographic.com/content/dam/kids/photos/animals/Mammals/A-G/beluga-whale-emerging-ocean.jpg.adapt.945.1.jpg" alt="">
+          <p>A beluga whale, really different looking from he others...white...</p>
         </a>
       </li>
     </ul>
@@ -59,7 +59,7 @@
     <a href="http://facebook.com">
       <img src="https://webucation.github.io/css-challenge-5/img/facebook-wrap.png" alt="Facebook Logo" class="social-icon">
     </a>
-    <p>&copy; 2017 Justin Scott</p>
+    <p>&copy; 2017 Alyssa Lippert</p>
   </footer>
 </div>
 </body> 
