--- a/about.html
+++ b/about.html
@@ -3,5 +3,37 @@
 <head>
 </head>
 <body>
+  <!-- *** Below is the About Page Content *** -->
+<header id="about">
+  <a href="#portfolio" id="logo">
+    <h1>Alyssa Lippert</h1>
+    <h2>Student</h2>
+  </a>
+  <nav>
+    <ul>
+      <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="#about" class="selected">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+<div id="wrapper">
+  <section>
+    <img src="">
+    <h3>About</h3>
+    <p>Hey what's up! I like to be called Aaron, I like to draw, play videogames and nap.
+      I like Overwatch the most but I'm also a huge Metal Gear fan.</p>
+    <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/aarlip426">@aarlip526</a>.</p>
+  </section>
+  <footer>
+    <a href="http://twitter.com">
+      <img src="https://webucation.github.io/css-challenge-5/img/twitter-wrap.png" alt="Twitter Logo" class="social-icon">
+    </a>
+    <a href="http://facebook.com">
+      <img src="https://webucation.github.io/css-challenge-5/img/facebook-wrap.png" alt="Facebook Logo" class="social-icon">
+    </a>
+    <p>&copy; 2017 Aaron Lippert</p>
+  </footer>
+</div>
 </body> 
 </html>
