--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,8 @@
     <h3>Contact Details</h3>
     <ul class="contact-info">
       <li class="phone"><a href="tel:555-6425">555-6425</a></li>
-      <li class="mail"><a href="mailto:justin@example.com">justin@example.com</a></li>
-      <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=jrsmotox">@jrsmotox</a></li>
+      <li class="mail"><a href="mailto:justin@example.com">akyssalippert750@rusdlearns.net</a></li>
+      <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=aarlip426">@aarlip426</a></li>
     </ul>
   </section>
   <footer>
@@ -38,7 +38,7 @@
     <a href="http://facebook.com">
       <img src="https://webucation.github.io/css-challenge-5/img/facebook-wrap.png" alt="Facebook Logo" class="social-icon">
     </a>
-    <p>&copy; 2017 Justin Scott</p>
+    <p>&copy; 2017 Aaron Lippert</p>
   </footer>
 </div>
 </body> 
